# task-crusader-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: check_ci.sh
src/task_crusade_mcp/: __init__.py  _version.py  py.typed
src/task_crusade_mcp/cli/: __init__.py  app.py
src/task_crusade_mcp/database/: __init__.py  orm_manager.py
src/task_crusade_mcp/database/models/: __init__.py  base.py  campaign.py  memory.py  task.py
src/task_crusade_mcp/database/repositories/: __init__.py  campaign_repository.py  memory_association_repository.py  memory_entity_repository.py  memory_session_repository.py  task_repository.py
src/task_crusade_mcp/domain/: __init__.py
src/task_crusade_mcp/domain/entities/: __init__.py  campaign.py  campaign_spec.py  hint.py  memory.py  result_types.py  task.py
src/task_crusade_mcp/domain/interfaces/: __init__.py  campaign_repository.py  memory_repository.py  task_repository.py
src/task_crusade_mcp/server/: __init__.py  error_sanitizer.py  mcp_server.py  service_executor.py
src/task_crusade_mcp/server/tools/: __init__.py  campaign_tools.py  task_tools.py
src/task_crusade_mcp/services/: __init__.py  campaign_service.py  dependency_validator.py  hint_generator.py  service_factory.py  task_service.py
src/task_crusade_mcp/tui/: __init__.py  app.py  constants.py  exceptions.py
src/task_crusade_mcp/tui/screens/: __init__.py  main.py
src/task_crusade_mcp/tui/services/: __init__.py  config_service.py  data_service.py
src/task_crusade_mcp/tui/styles/: app.tcss
src/task_crusade_mcp/tui/widgets/: __init__.py  bulk_actions_modal.py  bulk_delete_modal.py  campaign_list.py  delete_modal.py  dependency_modal.py  help_modal.py  new_campaign_modal.py  new_task_modal.py  task_data_table.py  task_detail.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_campaign_workflows.py  test_data_contracts.py  test_service_executor.py  test_task_workflows.py
tests/unit/test_domain/: test_result_types.py
tests/unit/test_services/: test_campaign_service.py  test_dependency_validator.py  test_hint_generator.py  test_task_service.py
tests/unit/test_tui/: conftest.py  test_campaign_list.py  test_task_detail.py  test_task_table.py
