[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-crusade-mcp"
dynamic = ["version"]
description = "Your AI coding assistant's quest companion - campaign and task management via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Task Crusade Contributors", email = "contributors@task-crusade.dev"}
]
maintainers = [
    {name = "Michael Crescenzo", email = "michael@crescenzo.dev"}
]
keywords = ["mcp", "task-management", "campaign", "ai-assistant", "claude", "cursor", "crusader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.6.0,<2.12.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "anyio>=4.0.0,<5.0.0",
    "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.50.0",
]
cli = [
    "typer>=0.16.0",
    "rich>=14.0.0",
]
all = [
    "textual>=0.50.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
crusader = "task_crusade_mcp.cli:main"
crusader-mcp = "task_crusade_mcp.server:main"
crusader-tui = "task_crusade_mcp.tui:main"

[project.urls]
Homepage = "https://github.com/mcrescenzo/task-crusader-mcp"
Documentation = "https://task-crusader-mcp.readthedocs.io"
Repository = "https://github.com/mcrescenzo/task-crusader-mcp"
Issues = "https://github.com/mcrescenzo/task-crusader-mcp/issues"

[tool.setuptools_scm]
write_to = "src/task_crusade_mcp/_version.py"
fallback_version = "0.1.0.dev0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/task_crusade_mcp --cov-report=term-missing --cov-fail-under=65"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "database: Database tests",
    "e2e: End-to-end tests",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "task_crusade_mcp.database.models.*",
    "task_crusade_mcp.database.orm_manager",
    "task_crusade_mcp.database.repositories.*",
    "task_crusade_mcp.tui.*"
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/task_crusade_mcp/_version.py" = ["I001"]  # Auto-generated by setuptools-scm

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
